CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

FIND_PACKAGE("sdl2"        REQUIRED)
FIND_PACKAGE("glew"        REQUIRED)
FIND_PACKAGE("opengl"      REQUIRED)
FIND_PACKAGE("sdl_image"   REQUIRED)

ADD_LIBRARY(Fragment
	Fragment/Vector2.cpp
	Fragment/Window.cpp
	${Fragment_INCLUDE_DIR}/Fragment/Vector2.h
	${Fragment_INCLUDE_DIR}/Fragment/Window.h
)

TARGET_INCLUDE_DIRECTORIES(Fragment PUBLIC
   ${Fragment_INCLUDE_DIR}
)

TARGET_INCLUDE_DIRECTORIES(Fragment PRIVATE
	${SDL2_INCLUDE_DIR}
	${GLEW_INCLUDE_PATH}
	${OPNGL_INCLUDE_DIR}
	${SDLIMAGE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES(Fragment PUBLIC
	${SDL2_LIBRARY}
	${GLEW_LIBRARY}
	${OPENGL_LIBRARY}
)
